[package]
name="sema-storage"
version="0.1.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/sema-storage"
description="Central durable Sema daemon for the minimal language engine"
[lib]
name="sema_storage"
[[bin]]
name="sema-storage"
path="src/bin/sema-storage.rs"
[dependencies]
kameo={git="https://github.com/LiGoldragon/kameo.git",rev="f491b45d7dcb55e5837eddde3d5d7ca8ceaa9f01",default-features=false,features=["macros"]}
name-table={git="https://github.com/LiGoldragon/name-table.git",rev="c3237f77c087e6feab49d6cf34971cebc14a11e6"}
rkyv={version="0.8",features=["bytecheck"]}
sema-engine={git="https://github.com/LiGoldragon/sema-engine.git",rev="93a6b5f063292e000a7bf395fdd5b46e3e943068"}
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234",default-features=false}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="28aeafb2588ea01908b55b75c431e1aa0c238f6f"}
tokio={version="1",features=["macros","rt-multi-thread","net","io-util","sync","time"]}
thiserror="2"
[dev-dependencies]
tempfile="3"
[lints.rust]
unsafe_code="forbid"
